# daily-coding

./: .gitignore  Makefile  README.md
bashrc/: daily-coding.bashrc
functions/: enter-daily-directory.sh  list.sh
scripts/: generate-bashrc-snippet.sh  git-commit-with-empty-message.sh  list-unimplemented-collections-this-year
src/2022-12-27/run-length-encoding/: run-length-encoding-test.scm
src/2022-12-28/fizz-buzz/: Makefile  fizz-buzz-test.scm  fizz-buzz.scm
src/2022-12-28/run-length-encoding/: README.md  run-length-encoding.scm
src/2022-12-30/run-length-encoding/: run-length-encoding.scm
src/bashrc/: daily-coding.bashrc
src/main/: _daily-coding._bash_complete  _daily-coding._common  _daily-coding.bash_complete  _daily-coding.cd  _daily-coding.commit  _daily-coding.common  _daily-coding.diff  _daily-coding.diff2  _daily-coding.help  _daily-coding.ls  _daily-coding.mkcd  _daily-coding.random  _daily-coding.stats  _daily-coding.sub-command.cd  _daily-coding.sub-command.commit  _daily-coding.sub-command.diff  _daily-coding.sub-command.help  _daily-coding.sub-command.ls  _daily-coding.sub-command.mkcd  _daily-coding.sub-command.push  _daily-coding.sub-command.random  _daily-coding.sub-command.stats  daily-coding.bashrc
src/test/: daily-coding.bashrc.test.sh
test/: daily-coding.bashrc.test.sh
workspace/2022-12-30/fizz-buzz.scm/: fizz-buzz.scm
workspace/2023-03-12/try-cabal.haskell/myapp/: myapp.cabal
workspace/2023-03-12/try-cabal.haskell/myapp/src/main/: Main.hs
workspace/2023-03-12/try-cabal.haskell/myapp/src/test/: NumericalSequenceTest.hs
(+2560 files in other folders)
